--- a/.github/ISSUE_TEMPLATE/---------.md
+++ b/.github/ISSUE_TEMPLATE/---------.md
@@ -4,14 +4,14 @@ about: "****/**/** - ****/**/** 形式で作成する週報。曜日は月～日
 
 ---
 
-## 学習 📚
+## 📚 学習
 
-## 仕事 💼
+## 💼 仕事
 
-## ライフハック 🏡
+## 🏡 ライフハック
 
-## 人生 🧙‍♂️
+## 🧙‍♂️ 人生
 
-## 趣味 💞
+## 💞 趣味
 
-## イベント 🎟
+## 🎟 イベント
